Added attack animation for bow, crossbow and sword. Added additional animations like celebrate, dance, spell casting for testing. Added crossbow attack goal. Added bow attack goal. Added base attribute screen for health, attack, armor, knockback resistance, movement speed, ... Added missing translations for some screens. Fixed smaller issues with the UI and dialogs. Fixed smaller issues. Improved base attribute screen for better usability. Improved melee attack goal. Improved skin selection for better usability.